== 0.2.4 (In Git)

=== New features
* Better exception if a World proc returns nil. (Aslak Hellesøy)
* Allow Step Definitions to use |*varargs|, but only on Ruby 1.9. (Aslak Hellesøy)

== 0.2.3 2009-03-30

This release sports 4 updated languages, slightly better help with snippets if you "quote" arguments
in your steps. Windows/JRuby users can enjoy colours and you get some more sugar with Tables.

=== New features
* Added new Then /^I should be on (.+)$/ do |page_name| step (Grant Hollingworth)
* Use skipped_param color for examples table header (#266 Eugene Naydanov)
* Added new Cucumber::Ast::Table#rows_hash method (Torbjørn Vatn)
* Windows/JRuby users can now enjoy colourful output (via http://github.com/aslakhellesoy/ansicolor) (#166 Aslak Hellesøy)
* Ambiguous step errors hint about --guess (unless --guess already on) (Aslak Hellesøy)
* Added translation for Slovak (Ahmed Al Hafoudh) 
* Updated translation for Dutch (Bart Zonneveld)
* Updated translation for Italian (Alessandro Baroni)
* Updated translation for Japanese (KAKUTANI Shintaro)

=== Bugfixes
* Fixed step name after step keyword without space (#265 Aslak Hellesøy)
* Backtrace is back in HTML reports (Aslak Hellesøy)

== 0.2.2 2009-03-25

This release includes some minor changes to make Cucumber work with pure Java. Cucumber
has already worked with Java for a while (using JRuby and step definitions in Ruby),
but now you can write step definitions in pure Java!

Check out the Cucumber Java project for more details:
http://github.com/aslakhellesoy/cucumber_java/tree/master

== 0.2.1 2009-03-25

This release fixes a few minor bugs and adds a couple of new features.

== Bugfixes
* Fixed Cucumber, and rails controller error handling (#49 Matt Patterson)
* HTML Formatter doesn't work correctly with scenario Outlines. (#260 Aslak Hellesøy)
* After blocks are run in reverse order of registration. (#113 Aslak Hellesøy)
* Snippets are showing 'Ands' (#249 Aslak Hellesøy)

=== New features